<?xml version="1.0" encoding="utf-8" standalone="no"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/intro_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/intro_activity_intro_constraint_layout_background_color">

	<TextView
		android:id="@+id/welcome_to_vendere_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/intro_activity_welcome_to_vendere_text_view_margin_top"
		android:gravity="center"
		android:letterSpacing="-0.04"
		android:lineSpacingMultiplier="1"
		android:text="@string/intro_activity_welcome_to_vendere_text_view_text"
		android:textColor="@color/intro_activity_welcome_to_vendere_text_view_text_color"
		android:textSize="@dimen/intro_activity_welcome_to_vendere_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="72dp"
		tools:layout_editor_absoluteY="47dp"/>

	<TextView
		android:id="@+id/an_exclusive_marketp_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/intro_activity_an_exclusive_marketp_text_view_margin_top"
		android:gravity="center"
		android:lineSpacingMultiplier="1.21"
		android:text="@string/intro_activity_an_exclusive_marketp_text_view_text"
		android:textColor="@color/intro_activity_an_exclusive_marketp_text_view_text_color"
		android:textSize="@dimen/intro_activity_an_exclusive_marketp_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="109dp"
		tools:layout_editor_absoluteY="99dp"/>

	<TextView
		android:id="@+id/log_in_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/intro_activity_log_in_text_view_margin_start"
		android:layout_marginTop="@dimen/intro_activity_log_in_text_view_margin_top"
		android:gravity="left"
		android:lineSpacingMultiplier="1"
		android:text="@string/intro_activity_log_in_text_view_text"
		android:textColor="@color/intro_activity_log_in_text_view_text_color"
		android:textSize="@dimen/intro_activity_log_in_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/welcome_to_vendere_text_view"
		tools:layout_editor_absoluteX="22dp"
		tools:layout_editor_absoluteY="202dp"/>

	<Button
		android:id="@+id/sign_up_button"
		android:layout_width="@dimen/intro_activity_sign_up_button_width"
		android:layout_height="@dimen/intro_activity_sign_up_button_height"
		android:layout_marginBottom="@dimen/intro_activity_sign_up_button_margin_bottom"
		android:background="?attr/selectableItemBackground"
		android:gravity="center"
		android:lineSpacingMultiplier="1"
		android:text="@string/intro_activity_sign_up_button_text"
		android:textColor="@color/intro_activity_sign_up_button_text_color"
		android:textSize="@dimen/intro_activity_sign_up_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="163dp"
		tools:layout_editor_absoluteY="588dp"/>

	<EditText
		android:id="@+id/placeholder_copy_edit_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/intro_activity_placeholder_copy_edit_text_margin_start"
		android:layout_marginTop="@dimen/intro_activity_placeholder_copy_edit_text_margin_top"
		android:gravity="left"
		android:hint="@string/intro_activity_placeholder_copy_edit_text_text"
		android:lineSpacingMultiplier="1"
		android:padding="0dp"
		android:textColor="@color/intro_activity_placeholder_copy_edit_text_text_color"
		android:textSize="@dimen/intro_activity_placeholder_copy_edit_text_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/log_in_text_view"
		tools:layout_editor_absoluteX="21dp"
		tools:layout_editor_absoluteY="286dp"/>

	<EditText
		android:id="@+id/password_edit_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/intro_activity_password_edit_text_margin_start"
		android:layout_marginTop="@dimen/intro_activity_password_edit_text_margin_top"
		android:gravity="left"
		android:hint="@string/intro_activity_password_edit_text_text"
		android:inputType="textPassword"
		android:lineSpacingMultiplier="1"
		android:padding="0dp"
		android:textColor="@color/intro_activity_password_edit_text_text_color"
		android:textSize="@dimen/intro_activity_password_edit_text_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/line_copy_edit_text"
		tools:layout_editor_absoluteX="21dp"
		tools:layout_editor_absoluteY="401dp"/>

	<EditText
		android:id="@+id/line_copy_edit_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="@dimen/intro_activity_line_copy_edit_text_margin_end"
		android:layout_marginTop="@dimen/intro_activity_line_copy_edit_text_margin_top"
		android:background="@color/intro_activity_line_copy_edit_text_background_color"
		android:fontFamily="@font/font_sfnstext"
		android:gravity="left"
		android:lineSpacingMultiplier="1"
		android:padding="0dp"
		android:textColor="@color/intro_activity_line_copy_edit_text_text_color"
		android:textSize="@dimen/intro_activity_line_copy_edit_text_text_size"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/placeholder_copy_edit_text"
		tools:layout_editor_absoluteX="21dp"
		tools:layout_editor_absoluteY="328dp"/>

	<EditText
		android:id="@+id/line_copy2_edit_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="@dimen/intro_activity_line_copy2_edit_text_margin_end"
		android:layout_marginTop="@dimen/intro_activity_line_copy2_edit_text_margin_top"
		android:background="@color/intro_activity_line_copy2_edit_text_background_color"
		android:fontFamily="@font/font_sfnstext"
		android:gravity="left"
		android:lineSpacingMultiplier="1"
		android:padding="0dp"
		android:textColor="@color/intro_activity_line_copy2_edit_text_text_color"
		android:textSize="@dimen/intro_activity_line_copy2_edit_text_text_size"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
		tools:layout_editor_absoluteX="21dp"
		tools:layout_editor_absoluteY="443dp"/>

	<Button
		android:id="@+id/button_copy_button"
		android:layout_width="@dimen/intro_activity_button_copy_button_width"
		android:layout_height="@dimen/intro_activity_button_copy_button_height"
		android:layout_marginBottom="@dimen/intro_activity_button_copy_button_margin_bottom"
		android:layout_marginRight="@dimen/intro_activity_button_copy_button_margin_end"
		android:background="@drawable/intro_activity_button_copy_button_selector"
		android:elevation="@dimen/elevation_default"
		android:gravity="center"
		android:lineSpacingMultiplier="1"
		android:text="@string/intro_activity_button_copy_button_text"
		android:textColor="@color/intro_activity_button_copy_button_text_color"
		android:textSize="@dimen/intro_activity_button_copy_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="22dp"
		tools:layout_editor_absoluteY="507dp"/>

</android.support.constraint.ConstraintLayout>
